--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@
         Questions related to our product? Contact our community manager at the
         link below.
       </div>
+      <span class="why-us__knopka"
+        ><img src="img\Button GEN.png" alt=""
+      /></span>
     </div>
   </body>
 </html>
